--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <body>
 <h2>PT08 Gonçalo e Tiago</h2>
 <script>
-   var first, name;     first = name = prompt("Enter new name, or OK to end")     while (name != "" && name != null) {     	if (name < first) 		first = name     	name = prompt("Enter new name, or OK to end")     }     document.write("First name alphabetically = " + first)
+    var first
+    var name
+    first = name = prompt("Enter new name, or OK to end")
+    while (name != "" && name != null) {
+    	if (name < first)
+		first = name
+    	name = prompt("Enter new name, or OK to end")
+    }
+    document.write("
+ First name alphabetically = " + first)
 </script>
 </body>
 </html> 
